Add m1024 skin pack

--- a/assets/retrogame/gmenu2x.conf
+++ b/assets/retrogame/gmenu2x.conf
@@ -1,5 +1,5 @@
-skin="Default"
-wallpaper="skins/Default/wallpapers/BlackJeans.png"
+skin="PSNextDark"
+wallpaper="retro-arcade.png"
 lang="en"
 tvoutEncoding="NTSC"
 videoBpp=16
