--- a/Makefile.wiz
+++ b/Makefile.wiz
@@ -38,7 +38,7 @@ clean:
 dist: build
 	install -m755 -D $(APPNAME) $(DISTDIR)/gmenu2x
 	install -m755 -d $(DISTDIR)/sections/applications $(DISTDIR)/sections/emulators $(DISTDIR)/sections/games $(DISTDIR)/sections/settings
-	install -m644 -D README.rst $(DISTDIR)/README.txt
+	install -m644 -D README.md $(DISTDIR)/README.txt
 	install -m644 -D COPYING $(DISTDIR)/COPYING
 	install -m644 -D ChangeLog $(DISTDIR)/ChangeLog
 	cp -RH assets/skins assets/translations assets/$(TARGET)/* $(DISTDIR)
