Improvements in InputManager; Improve inputCommonActions; Combo key is SELECT

--- a/assets/skins/Default/skin.conf
+++ b/assets/skins/Default/skin.conf
@@ -9,4 +9,6 @@ messageBoxBorder=#505050ff
 messageBoxSelection=#a0a0a0ff
 font=#ffffffff
 fontOutline=#000000d0
+fontAltOutline=#ffffff30
+fontAlt=#000000d0
 fontSize=8
