--- a/assets/skins/DekUI/skin.conf
+++ b/assets/skins/DekUI/skin.conf
@@ -2,7 +2,8 @@ wallpaper="dekthro-two-plus.png"
 linkWidth=70
 linkHeight=65
 topBarHeight=40
-fontSize=14
+fontSize=9
+fontSizeTitle=14
 wallpaper=0
 topBarBg=#ffffff46
 bottomBarBg=#ffffff46
